Fixed image links from distorting spacing when a border shows on hover

--- a/src/styles.css
+++ b/src/styles.css
@@ -58,12 +58,12 @@ body {
   border: 1px solid #d3e7ff;
 }
 .main-content a img:hover {
-  border: 2px solid #d3e7ff;
-  box-shadow: none;
+  border: 1px solid #d3e7ff;
+  box-shadow: 0 0 0 1px #d3e7ff;
 }
 .main-content a img:active {
-  border: 2px solid #ffffd3;
-  box-shadow: none;
+  border: 1px solid #ffffd3;
+  box-shadow: 0 0 0 1px #ffffd3;
 }
 
 
